Added description for recipe and add ingredient list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="recipes/imgs/lasagna.png">
-    <a href="https://www.allrecipes.com/recipe/11786/hearty-vegetable-lasagna/">hearty vegetable lasagna</a>
+    <img src="recipes/imgs/lasagna.png" alt="pixel art lasagna">
+        <h2>Description</h2>
+            <p>Finally! A veggie lasagna I like. I added thawed and drained frozen spinach to the ricotta mixture (what is lasagna without spinach?), and I also followed other suggestions and added about 3/4 cup each of finally chopped carrot, broccoli, and zucchini. It was great. This recipe has become my mainstay for veggie lasagna. Thanks!</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>Ricotta</li>
+                <li>Marinara Sauce</li>
+                <li>Dry Pasta</li>
+                <li>Spinach</li>
+                <li>Zucchini</li>
+                <li>Garlic</li>
+                <li>Onion</li>
+                <li>Mushrooms</li>
+                <li>Green Bell Pepper</li>
+            </ul>    
+            <a href="https://www.allrecipes.com/recipe/11786/hearty-vegetable-lasagna/">hearty vegetable lasagna</a>
 </body>
 </html>
