--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="recipes/cookie.html">Sugar Cookie Recipe</a></li>
+    <li><a href="recipes/tofu.html">Agedashi Tofu Recipe</a></li>
     </ul>
 </body>
 </html>
