--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Collection of Recipes!!</h1>
     <img src="recipes/imgs/HnK_Cook_2.jpg">
+    <h2>Enjoy any of these recipes!</h2>
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="recipes/cookie.html">Sugar Cookie Recipe</a></li>
