--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Collection of Recipes!!</h1>
-    <img src="recipes/imgs/HnK_Cook_2.jpg">
+    <img src="recipes/imgs/HnK_Cook_2.jpg" alt="Chef Kirby">
     <h2>Enjoy any of these recipes!</h2>
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
