added alt to img element of kirby

--- a/recipes/tofu.html
+++ b/recipes/tofu.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Agedashi Tofu Recipe</h1>
-    <img src="../recipes/imgs/tofu.png">
+    <img src="../recipes/imgs/tofu.png" alt="tofu on pixel cloud">
         <h2>Description</h2>
             <p>This quick and easy Japanese fried tofu recipe is a great appetizer. Crispy fried cubes of tofu are served with a tasty sauce and chopped green onion.</p>
         <h2>Ingredients</h2>
